--- a/ecommerce_application/roles/docker/tasks/main.yml
+++ b/ecommerce_application/roles/docker/tasks/main.yml
@@ -53,11 +53,8 @@
 
 - name: Install docker-engine
   apt:
-    name: "{{ item }}"
-  with_items:
-    - docker-ce
-    - docker-ce-cli
-    - containerd.io
+    name: ['docker-ce', 'docker-ce-cli', 'containerd.io']
+    update_cache: yes
 
 - name: Add docker access
   become: yes
