--- a/ecommerce_application/roles/api/tasks/main.yml
+++ b/ecommerce_application/roles/api/tasks/main.yml
@@ -12,7 +12,7 @@
     dest: /tmp/eShopOnContainers/src/.env
 
 - name: api | Install API component
-  command: chdir=/tmp/eShopOnContainers/src/ docker-compose -f docker-compose-api.yml -f docker-compose-api.override.yml build
+  command: chdir=/tmp/eShopOnContainers/src/ docker-compose build
 
 - name: api | Bring up API server
-  command: chdir=/tmp/eShopOnContainers/src/ docker-compose -f docker-compose-api.yml -f docker-compose-api.override.yml up -d
+  command: chdir=/tmp/eShopOnContainers/src/ docker-compose up
