--- a/ecommerce_application/roles/web/tasks/main.yml
+++ b/ecommerce_application/roles/web/tasks/main.yml
@@ -1,7 +1,7 @@
 # (C) Copyright 2020 Hewlett Packard Enterprise Development LP
 - name: web | clone the repo
   git:
-    repo: 'https://github.com/Thavamanirajasakthivel/eShopOnContainers'
+    repo: "{{ input_vars.app_url }}"
     dest: /tmp/eShopOnContainers
     force: yes
   become: no
