--- a/ecommerce_application/roles/web/tasks/main.yml
+++ b/ecommerce_application/roles/web/tasks/main.yml
@@ -12,7 +12,7 @@
     dest: /tmp/eShopOnContainers/src/.env
     
 - name: web | Install Web component
-  command: chdir=/tmp/eShopOnContainers/src/ docker-compose -f docker-compose-web.yml -f docker-compose-web.override.yml build
+  command: chdir=/tmp/eShopOnContainers/src/ docker-compose -f docker-compose-web.yml -f docker-compose-web.override.yml build --build-arg http_proxy=$http_proxy --build-arg https_proxy=$http_proxy
 
 - name: web | Bring up Web server
   command: chdir=/tmp/eShopOnContainers/src/ docker-compose -f docker-compose-web.yml -f docker-compose-web.override.yml up -d 
